--- a/src/app/book/bookdetail/bookdetail.component.css
+++ b/src/app/book/bookdetail/bookdetail.component.css
@@ -3,6 +3,9 @@
     
 
 }
+.card > img{
+    height:400px
+  }
 
 .content{
     margin-top: 1em;
